src/components/Home.css
/* MAIN CONTAINER */
.home-container {
    color: black;
    padding-top: 1rem;
    padding-bottom: 4rem;
    font-family: 'Josefin Sans', sans-serif;
}

/* MAIN FLEX CONTAINER */
.home-main {
    display: flex;
    flex-direction: column;
    padding: 1rem  4rem;
}

/* ROW WHEN SMALl, COLUMNS WHEN LARGER */
@media (min-width:800px) {
    .home-main {
        flex-direction: row;
    }
} 

/* LEFT COLUMN - FLEXBOX CHILD + GRID CONTAINER */
.left{
    border: 2px solid green;
    flex: 1;
    width: 100%;
}

/* GRID ITEM WITHIN FLEXBOX COLUMN */
.grid-cont {
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: repeat(4, 1fr);
   
}

/* COlUMN 1 - GRID ITEM */
.main-grid-item {
width: 100%;
}

/* noodle */
.main-grid-item:nth-of-type(1){ 
    grid-column: 6 / 8;
    grid-row: 4 / 5;
    position: relative;
    transform: rotate(145deg);
    left: 25%;
    top: 20%;
}

/* hiker */
.main-grid-item:nth-of-type(2){
    grid-column: 1 / 4;
    grid-row: 1 / 2;
    transform: rotate(100deg);
    position:relative;
    width: 50%;
    left: 10%;
    top: 10%;
}

.hiker {
    width: 90%;
    border-radius: 10px;
} 

/* hiker */
.main-grid-item:nth-of-type(3){
    grid-column: 2 / 6;
    grid-row: 1 / 4;  
}

/*  hiker*/
.main-grid-item:nth-of-type(4){
    grid-column: 4 / 8;
    grid-row: 2 / 4;
    position: relative;
    top: 40%;
}

/* green */
.main-grid-item:nth-of-type(5){
    grid-column: 4 / 6;
    grid-row: 2 / 4;  
    position: relative;
    align-self: center;
    width: 70%; 
    left: 10%;
    transform: rotate(50deg);
} 

/* squiggle */
.main-grid-item:nth-of-type(6){ 
    grid-column: 1 / 3; 
    grid-row: 3 / 5;  
    transform: rotate(20deg);
    position: relative;
    top: 50%;
}

/* dot  */
.main-grid-item:nth-of-type(7){ 
    grid-column: 2 / 4; 
     grid-row: 3 / 4;  
     position: relative;
     align-self: center;
     width: 25%;
     left:30%;
     top: 35%;
     transform: rotate(-55deg)
}

 /* RIGHT COLUMN  */
.right{
     width: 100%;
 flex: 1; 
}

.home-container h3 {
    font-size: 2rem;
    line-height: 1;
  
}

.intro-item:nth-of-type(1){
    grid-column: 2 / 7;
    
}

/* rainbow */

.intro-item:nth-of-type(2){
    grid-column: 4 / 5;
    grid-row: 2 / 3;
    align-self:flex-start;

}



/* SVG SECTION */
.svg-section{
    background-color: rgb(237, 224, 193);
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-around;
}

.svg-item {
    flex: 1;
    width: 100%; 
    height: auto;
    border: 1px solid black;
    padding: 1rem;
}
/* ROW WHEN SMALl, COLUMNS WHEN LARGER */
@media (min-width:800px) {
    .svg-section {
        flex-direction: row;
    }
} 

.how-to-use {
    border: 3px solid rgb(209, 252, 121);
    padding: 2rem;
    background-color:  rgb(26, 33, 120);
    color: whitesmoke;
    font-family: 'Viaoda Libre', cursive;
}
.how-to-use h3 {
    padding: 5rem;
}

